# Dream_team_second_edition

./: CMakeLists.txt  README.md  Useful resourses.txt  main.cpp  План работы.xlsx  Правила работы над проектом.md
headers/: App.h  Automaton.h  AutomatonView.h  Cell.h  Rules.h  Vector2D.h
src/: App.cpp  Automaton.cpp  AutomatonView.cpp  Cell.cpp  Rules.cpp
